test/libyul/yulSyntaxTests/objects/empty_object.yul
object "A" {
}
// ----
// ParserError 2314: (13-14): Expected 'code' but got '}'
